Testes unitários:
- Criação dos testes unitarios das classes de Controller, Service e Repository

Signed-off-by: LuizAndreVR <luiz.andre@vrsoft.com.br>