@@ -60,7 +60,6 @@ dependencies {
 	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-
 	compileOnly 'org.projectlombok:lombok'
 
 	//Serialização JSON
@@ -68,9 +67,15 @@ dependencies {
 
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation "org.mockito:mockito-junit-jupiter:5.12.0"
+	testImplementation "org.mockito:mockito-inline:5.2.0"
 	runtimeOnly 'org.postgresql:postgresql'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs = [
+			'-XX:+EnableDynamicAgentLoading',
+			'-Xshare:off'
+	]
 }
